--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
   </div>
 
   <!-- CTA Bêtises -->
-  <div class="yam-betises-cta" onclick="document.getElementById('betisesBtn').click()">
+  <div class="yam-betises-cta" onclick="openPrankMenu()">
     <div class="yam-betises-cta-icon">🤡</div>
     <div>
       <div class="yam-betises-cta-label">Faire une bêtise</div>
