--- a/index.html
+++ b/index.html
@@ -8,6 +8,204 @@
 <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<!-- ═══════════════════════════════════════════════════════════
+     ÉCRAN LOGIN V2
+════════════════════════════════════════════════════════════ -->
+<div id="v2LoginOverlay">
+  <div id="v2LoginBox">
+    <div id="v2LoginLogo">💕</div>
+    <div id="v2LoginTitle">YAM</div>
+    <div id="v2LoginSub">You And Me</div>
+
+    <!-- Onglets -->
+    <div id="v2LoginTabs">
+      <button class="v2-tab active" id="v2TabLogin"    onclick="v2SwitchTab('login')">Connexion</button>
+      <button class="v2-tab"        id="v2TabRegister" onclick="v2SwitchTab('register')">Inscription</button>
+      <button class="v2-tab"        id="v2TabJoin"     onclick="v2SwitchTab('join')">Rejoindre</button>
+    </div>
+
+    <!-- Formulaire Connexion -->
+    <div id="v2FormLogin" class="v2-form">
+      <input class="v2-input" id="v2LoginPseudo"   type="text"     placeholder="Pseudo" autocomplete="username" />
+      <input class="v2-input" id="v2LoginPassword" type="password" placeholder="Mot de passe" autocomplete="current-password" />
+      <button class="v2-btn" onclick="v2DoLogin()">Se connecter</button>
+    </div>
+
+    <!-- Formulaire Inscription -->
+    <div id="v2FormRegister" class="v2-form" style="display:none;">
+      <input class="v2-input" id="v2RegPseudo"   type="text"     placeholder="Choisis un pseudo" autocomplete="username" />
+      <input class="v2-input" id="v2RegPassword" type="password" placeholder="Mot de passe" autocomplete="new-password" />
+      <div id="v2RoleSelect">
+        <button class="v2-role-btn" id="v2RoleGirl" onclick="v2SelectRole('girl')">👧 Elle</button>
+        <button class="v2-role-btn" id="v2RoleBoy"  onclick="v2SelectRole('boy')">👦 Lui</button>
+      </div>
+      <button class="v2-btn" onclick="v2DoRegister()">Créer mon compte</button>
+      <div id="v2RegInfo" class="v2-info" style="display:none;"></div>
+    </div>
+
+    <!-- Formulaire Rejoindre -->
+    <div id="v2FormJoin" class="v2-form" style="display:none;">
+      <input class="v2-input" id="v2JoinPseudo"   type="text"     placeholder="Choisis un pseudo" autocomplete="username" />
+      <input class="v2-input" id="v2JoinPassword" type="password" placeholder="Mot de passe" autocomplete="new-password" />
+      <input class="v2-input" id="v2JoinCode"     type="text"     placeholder="Code couple (ex: YAM-4X9K)" autocomplete="off" style="text-transform:uppercase;letter-spacing:2px;" />
+      <div id="v2JoinRoleSelect">
+        <button class="v2-role-btn" id="v2JoinRoleGirl" onclick="v2SelectJoinRole('girl')">👧 Elle</button>
+        <button class="v2-role-btn" id="v2JoinRoleBoy"  onclick="v2SelectJoinRole('boy')">👦 Lui</button>
+      </div>
+      <button class="v2-btn" onclick="v2DoJoin()">Rejoindre</button>
+    </div>
+
+    <div id="v2LoginError" class="v2-error"></div>
+    <div id="v2LoginLoader" class="v2-loader" style="display:none;">⏳</div>
+  </div>
+</div>
+
+<style>
+#v2LoginOverlay {
+  display: none;
+  position: fixed; inset: 0; z-index: 9999;
+  background: var(--bg);
+  flex-direction: column; align-items: center; justify-content: center;
+}
+#v2LoginOverlay.active { display: flex; }
+#v2LoginBox {
+  width: 100%; max-width: 360px; padding: 32px 24px;
+  background: var(--s1); border: 1px solid var(--border);
+  border-radius: 24px; box-shadow: 0 8px 40px rgba(0,0,0,0.3);
+  text-align: center;
+}
+#v2LoginLogo { font-size: 44px; margin-bottom: 4px; }
+#v2LoginTitle { font-family: 'Playfair Display', serif; font-size: 28px; font-weight: 700; color: var(--text); }
+#v2LoginSub { font-size: 13px; color: var(--muted); margin-bottom: 24px; }
+#v2LoginTabs { display: flex; gap: 4px; margin-bottom: 20px; background: var(--s2); border-radius: 12px; padding: 4px; }
+.v2-tab {
+  flex: 1; padding: 8px 4px; font-size: 12px; font-weight: 600;
+  font-family: 'DM Sans', sans-serif; background: transparent; border: none;
+  border-radius: 8px; color: var(--muted); cursor: pointer; transition: all 0.2s;
+}
+.v2-tab.active { background: var(--s1); color: var(--text); box-shadow: 0 2px 8px rgba(0,0,0,0.15); }
+.v2-form { display: flex; flex-direction: column; gap: 10px; }
+.v2-input {
+  width: 100%; padding: 12px 14px; font-size: 15px; font-family: 'DM Sans', sans-serif;
+  background: var(--s2); border: 1px solid var(--border); border-radius: 10px;
+  color: var(--text); outline: none; box-sizing: border-box; transition: border-color 0.2s;
+}
+.v2-input:focus { border-color: var(--green); }
+.v2-btn {
+  width: 100%; padding: 13px; margin-top: 4px; background: var(--green);
+  color: #000; font-weight: 700; font-size: 15px; font-family: 'DM Sans', sans-serif;
+  border: none; border-radius: 10px; cursor: pointer; transition: opacity 0.2s;
+}
+.v2-btn:hover { opacity: 0.88; }
+#v2RoleSelect, #v2JoinRoleSelect { display: flex; gap: 8px; }
+.v2-role-btn {
+  flex: 1; padding: 10px; background: var(--s2); border: 1.5px solid var(--border);
+  border-radius: 10px; color: var(--text); font-size: 14px; font-weight: 600;
+  font-family: 'DM Sans', sans-serif; cursor: pointer; transition: all 0.2s;
+}
+.v2-role-btn.selected { border-color: var(--green); background: rgba(0,201,167,0.1); }
+.v2-error { font-size: 12px; color: #e05555; margin-top: 8px; min-height: 18px; }
+.v2-info { font-size: 13px; color: var(--green); margin-top: 8px; line-height: 1.5; }
+.v2-loader { font-size: 20px; margin-top: 8px; }
+</style>
+
+<script>
+// ══════════════════════════════════════════
+// LOGIN V2 — Interface
+// ══════════════════════════════════════════
+var _v2SelectedRole     = null;
+var _v2SelectedJoinRole = null;
+
+function v2SwitchTab(tab){
+  ['login','register','join'].forEach(function(t){
+    document.getElementById('v2Tab'+t.charAt(0).toUpperCase()+t.slice(1)).classList.toggle('active', t===tab);
+    document.getElementById('v2Form'+t.charAt(0).toUpperCase()+t.slice(1)).style.display = t===tab ? 'flex' : 'none';
+  });
+  document.getElementById('v2LoginError').textContent = '';
+}
+
+function v2SelectRole(role){
+  _v2SelectedRole = role;
+  document.getElementById('v2RoleGirl').classList.toggle('selected', role==='girl');
+  document.getElementById('v2RoleBoy').classList.toggle('selected',  role==='boy');
+}
+
+function v2SelectJoinRole(role){
+  _v2SelectedJoinRole = role;
+  document.getElementById('v2JoinRoleGirl').classList.toggle('selected', role==='girl');
+  document.getElementById('v2JoinRoleBoy').classList.toggle('selected',  role==='boy');
+}
+
+function v2SetError(msg){ document.getElementById('v2LoginError').textContent = msg || ''; }
+function v2SetLoading(on){
+  document.getElementById('v2LoginLoader').style.display = on ? 'block' : 'none';
+  document.querySelectorAll('.v2-btn').forEach(function(b){ b.disabled = on; });
+}
+
+function v2DoLogin(){
+  var pseudo   = document.getElementById('v2LoginPseudo').value.trim();
+  var password = document.getElementById('v2LoginPassword').value;
+  if(!pseudo || !password){ v2SetError('Remplis tous les champs'); return; }
+  v2SetError(''); v2SetLoading(true);
+  v2Login(pseudo, password).then(function(res){
+    v2SetLoading(false);
+    if(!res.ok){ v2SetError(res.error); return; }
+    v2CloseLogin();
+    if(window.setProfile) window.setProfile(res.data.user.role);
+  });
+}
+
+function v2DoRegister(){
+  var pseudo   = document.getElementById('v2RegPseudo').value.trim();
+  var password = document.getElementById('v2RegPassword').value;
+  if(!pseudo || !password){ v2SetError('Remplis tous les champs'); return; }
+  if(!_v2SelectedRole){ v2SetError('Choisis Zelda ou Link'); return; }
+  v2SetError(''); v2SetLoading(true);
+  v2Register(pseudo, password, _v2SelectedRole).then(function(res){
+    v2SetLoading(false);
+    if(!res.ok){ v2SetError(res.error); return; }
+    var info = document.getElementById('v2RegInfo');
+    info.innerHTML = '🎉 Compte créé !<br>Ton code couple : <strong>' + res.data.couple_code + '</strong><br>Partage-le à ton partenaire pour qu\'il rejoigne.';
+    info.style.display = 'block';
+    setTimeout(function(){ v2CloseLogin(); if(window.setProfile) window.setProfile(res.data.user.role); }, 3000);
+  });
+}
+
+function v2DoJoin(){
+  var pseudo   = document.getElementById('v2JoinPseudo').value.trim();
+  var password = document.getElementById('v2JoinPassword').value;
+  var code     = document.getElementById('v2JoinCode').value.trim().toUpperCase();
+  if(!pseudo || !password || !code){ v2SetError('Remplis tous les champs'); return; }
+  if(!_v2SelectedJoinRole){ v2SetError('Choisis Zelda ou Link'); return; }
+  v2SetError(''); v2SetLoading(true);
+  v2Join(pseudo, password, _v2SelectedJoinRole, code).then(function(res){
+    v2SetLoading(false);
+    if(!res.ok){ v2SetError(res.error); return; }
+    v2CloseLogin(); if(window.setProfile) window.setProfile(res.data.user.role);
+  });
+}
+
+function v2CloseLogin(){
+  document.getElementById('v2LoginOverlay').classList.remove('active');
+}
+
+function v2ShowLogin(){
+  document.getElementById('v2LoginOverlay').classList.add('active');
+}
+
+// Afficher l'écran login si pas de session v2 active
+(function(){
+  function checkV2Session(){
+    try{
+      var s = JSON.parse(localStorage.getItem('yam_v2_session')||'null');
+      if(s && s.token && s.expires_at && new Date(s.expires_at) > new Date()) return true;
+    }catch(e){}
+    return false;
+  }
+  if(!checkV2Session()) v2ShowLogin();
+})();
+</script>
+
 <div id="pullRefreshIndicator">
   <span class="ptr-arrow" id="ptrArrow">↓</span>
   <div class="ptr-spinner"></div>
