--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ function v2ApplyDynamicNames(){
     <div class="album-card lui-card-wrap" data-slot="elle-animal">
       <div class="album-image">
         <span class="album-heart">🤍</span>
-        <img id="elle-img-animal" loading="lazy" decoding="async" src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-1.jpg" onerror="this.onerror=null;this.src='assets/images/image-1.jpg'" onload="this.classList.add('loaded')">
+        <img id="elle-img-animal" loading="lazy" decoding="async" src="" onerror="this.onerror=null;this.src='assets/images/image-1.jpg'" onload="this.classList.add('loaded')">
         <div class="skeleton-overlay" id="skel-elle-animal"></div>
         <div class="album-banner">Animal</div>
         <div class="lui-upload-btn" id="elle-btn-animal" onclick="elleUploadClick('animal')">
@@ -597,7 +597,7 @@ function v2ApplyDynamicNames(){
     <div class="album-card lui-card-wrap" data-slot="elle-fleurs">
       <div class="album-image">
         <span class="album-heart">🤍</span>
-        <img id="elle-img-fleurs" loading="lazy" decoding="async" src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-2.jpg" onerror="this.onerror=null;this.src='assets/images/image-2.jpg'" onload="this.classList.add('loaded')">
+        <img id="elle-img-fleurs" loading="lazy" decoding="async" src="" onerror="this.onerror=null;this.src='assets/images/image-2.jpg'" onload="this.classList.add('loaded')">
         <div class="skeleton-overlay" id="skel-elle-fleurs"></div>
         <div class="album-banner">Fleurs</div>
         <div class="lui-upload-btn" id="elle-btn-fleurs" onclick="elleUploadClick('fleurs')">
@@ -614,7 +614,7 @@ function v2ApplyDynamicNames(){
     <div class="album-card lui-card-wrap" data-slot="elle-personnage">
       <div class="album-image">
         <span class="album-heart">🤍</span>
-        <img id="elle-img-personnage" loading="lazy" decoding="async" src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-3.jpg" onerror="this.onerror=null;this.src='assets/images/image-3.jpg'" onload="this.classList.add('loaded')">
+        <img id="elle-img-personnage" loading="lazy" decoding="async" src="" onerror="this.onerror=null;this.src='assets/images/image-3.jpg'" onload="this.classList.add('loaded')">
         <div class="skeleton-overlay" id="skel-elle-personnage"></div>
         <div class="album-banner">Personnage</div>
         <div class="lui-upload-btn" id="elle-btn-personnage" onclick="elleUploadClick('personnage')">
@@ -631,7 +631,7 @@ function v2ApplyDynamicNames(){
     <div class="album-card lui-card-wrap" data-slot="elle-saison">
       <div class="album-image">
         <span class="album-heart">🤍</span>
-        <img id="elle-img-saison" loading="lazy" decoding="async" src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-4.jpg" onerror="this.onerror=null;this.src='assets/images/image-4.jpg'" onload="this.classList.add('loaded')">
+        <img id="elle-img-saison" loading="lazy" decoding="async" src="" onerror="this.onerror=null;this.src='assets/images/image-4.jpg'" onload="this.classList.add('loaded')">
         <div class="skeleton-overlay" id="skel-elle-saison"></div>
         <div class="album-banner">Saison</div>
         <div class="lui-upload-btn" id="elle-btn-saison" onclick="elleUploadClick('saison')">
@@ -648,7 +648,7 @@ function v2ApplyDynamicNames(){
     <div class="album-card lui-card-wrap" data-slot="elle-repas">
       <div class="album-image">
         <span class="album-heart">🤍</span>
-        <img id="elle-img-repas" loading="lazy" decoding="async" src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-5.jpg" onerror="this.onerror=null;this.src='assets/images/image-5.jpg'" onload="this.classList.add('loaded')">
+        <img id="elle-img-repas" loading="lazy" decoding="async" src="" onerror="this.onerror=null;this.src='assets/images/image-5.jpg'" onload="this.classList.add('loaded')">
         <div class="skeleton-overlay" id="skel-elle-repas"></div>
         <div class="album-banner">Repas</div>
         <div class="lui-upload-btn" id="elle-btn-repas" onclick="elleUploadClick('repas')">
@@ -822,14 +822,15 @@ function v2ApplyDynamicNames(){
 </div>
 
 <div class="section fade-in" id="Books">
-  <div class="section-label">Idées livre 📚</div>
-  <div class="slider">
-    <div class="album-card"><div class="album-image"><a href="https://booknode.com/la_saga_des_impossibles_tome_1_adam_03666756" target="_blank" rel="noopener noreferrer"><img src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-6.jpg" onerror="this.onerror=null;this.src='assets/images/image-6.jpg'"></a><div class="album-banner">Adam</div></div><div class="album-desc">Une romance qui touche l'âme ✨</div></div>
-    <div class="album-card"><div class="album-image"><a href="https://www.fnac.com/a18261401/Emma-Green-Ce-qui-nous-rend-vivants" target="_blank" rel="noopener noreferrer"><img src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-7.jpg" onerror="this.onerror=null;this.src='assets/images/image-7.jpg'"></a><div class="album-banner">Ce qui nous rend vivants</div></div><div class="album-desc">Quand l'amour révèle tout 💖</div></div>
-    <div class="album-card"><div class="album-image"><a href="https://www.fnac.com/a17088484/Captive-Tome-1-Captive-Sarah-Rivens" target="_blank" rel="noopener noreferrer"><img src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-8.jpg" onerror="this.onerror=null;this.src='assets/images/image-8.jpg'"></a><div class="album-banner">Captive</div></div><div class="album-desc">Passion et suspense 🔥</div></div>
-    <div class="album-card"><div class="album-image"><a href="https://booknode.com/avant_toi_0690393" target="_blank" rel="noopener noreferrer"><img src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-9.jpg" onerror="this.onerror=null;this.src='assets/images/image-9.jpg'"></a><div class="album-banner">Avant toi</div></div><div class="album-desc">Un amour impossible 💔</div></div>
-    <div class="album-card"><div class="album-image"><a href="https://www.fnac.com/a7792857/Katarina-Bivald-La-Bibliotheque-des-coeurs-cabosses" target="_blank" rel="noopener noreferrer"><img src="https://zjmbyjpxqrojnuymnpcf.supabase.co/storage/v1/object/public/images/image-10.jpg" onerror="this.onerror=null;this.src='assets/images/image-10.jpg'"></a><div class="album-banner">La bibliothèque des cœurs cabossés</div></div><div class="album-desc">Émotions à chaque page 📚</div></div>
+  <div class="section-label" style="display:flex;align-items:center;justify-content:space-between;">
+    <span>Idées livre 📚</span>
+    <button id="booksAddBtn" onclick="booksAddClick()" style="display:none;background:var(--green);color:#000;border:none;border-radius:8px;padding:5px 12px;font-size:12px;font-weight:700;font-family:'DM Sans',sans-serif;cursor:pointer;">+ Ajouter</button>
   </div>
+  <div class="slider" id="booksSlider">
+    <div class="memo-loading" style="padding:20px;color:var(--muted);font-size:13px;text-align:center;">Chargement...</div>
+  </div>
+  <!-- Input fichier image caché -->
+  <input type="file" id="booksFileInput" accept="image/jpeg,image/png,image/webp" style="display:none" onchange="booksHandleFile(this)">
 </div>
 
 <div id="wheelSection" class="fade-in">
@@ -2121,6 +2122,7 @@ function v2ApplyDynamicNames(){
 
 
 <script src="js/app-core.js"></script>
+<script src="js/app-account.js"></script>
 <script src="js/app-love.js"></script>
 <script src="js/app-music.js"></script>
 <script src="js/app-games.js"></script>
