--- a/index.html
+++ b/index.html
@@ -1908,6 +1908,7 @@
 <script src="js/app-love.js"></script>
 <script src="js/app-music.js"></script>
 <script src="js/app-games.js"></script>
+<script src="js/app-skyjo.js"></script>
 <script src="js/app-pranks.js"></script>
 <script src="js/app-messages.js"></script>
 <script src="js/app-events.js"></script>
