--- a/index.html
+++ b/index.html
@@ -107,6 +107,105 @@
 .v2-error { font-size: 12px; color: #e05555; margin-top: 8px; min-height: 18px; }
 .v2-info { font-size: 13px; color: var(--green); margin-top: 8px; line-height: 1.5; }
 .v2-loader { font-size: 20px; margin-top: 8px; }
+
+/* ═══════════════════════════════════════════════
+   SKYJO — RÉACTIONS EN JEU
+═══════════════════════════════════════════════ */
+
+/* Bouton déclencheur — bas gauche de #skyjoGameArea */
+.sj-reaction-trigger {
+  position: absolute;
+  bottom: 40px;
+  left: 8px;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: var(--s1);
+  border: 1.5px solid var(--border);
+  cursor: pointer;
+  padding: 4px;
+  z-index: 50;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.25);
+  transition: transform 0.15s, box-shadow 0.15s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sj-reaction-trigger:active { transform: scale(0.9); }
+.sj-reaction-trigger.cooldown { opacity: 0.45; pointer-events: none; }
+.sj-reaction-trigger-icon { width: 32px; height: 32px; object-fit: contain; }
+
+/* Picker — arc de cercle au-dessus du bouton */
+.sj-reaction-picker {
+  position: absolute;
+  bottom: 92px;
+  left: 4px;
+  z-index: 51;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  align-items: center;
+  animation: sjPickerIn 0.18s cubic-bezier(.17,.89,.32,1.28);
+}
+@keyframes sjPickerIn {
+  from { opacity:0; transform: scale(0.7) translateY(12px); }
+  to   { opacity:1; transform: scale(1) translateY(0); }
+}
+.sj-reaction-btn {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background: var(--s1);
+  border: 1.5px solid var(--border);
+  cursor: pointer;
+  padding: 4px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  transition: transform 0.12s, box-shadow 0.12s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sj-reaction-btn:active { transform: scale(0.85); }
+.sj-reaction-btn img { width: 36px; height: 36px; object-fit: contain; }
+
+/* Bulle de réaction — style speech bubble */
+.sj-reaction-bubble {
+  position: absolute;
+  z-index: 60;
+  pointer-events: none;
+  animation: sjBubbleIn 0.3s cubic-bezier(.17,.89,.32,1.28);
+}
+@keyframes sjBubbleIn {
+  from { opacity:0; transform: scale(0.4) translateY(10px); }
+  to   { opacity:1; transform: scale(1) translateY(0); }
+}
+@keyframes sjBubbleOut {
+  from { opacity:1; transform: scale(1); }
+  to   { opacity:0; transform: scale(0.6) translateY(-6px); }
+}
+.sj-reaction-bubble.hiding {
+  animation: sjBubbleOut 0.25s ease forwards;
+}
+
+/* Ma bulle — à gauche de ma zone (bas) */
+.sj-reaction-me {
+  bottom: 90px;
+  left: 60px;
+}
+
+/* Bulle adversaire — à gauche de sa zone (haut) */
+.sj-reaction-opp {
+  top: 52px;
+  left: 8px;
+}
+
+.sj-reaction-img {
+  width: 72px;
+  height: 72px;
+  object-fit: contain;
+  filter: drop-shadow(0 4px 12px rgba(0,0,0,0.45));
+}
+
 </style>
 
 
@@ -1367,7 +1466,7 @@
     <div id="sjLoadingOverlay"><div id="sjLoadingDot"></div></div>
 
     <!-- ZONE DE JEU -->
-    <div id="skyjoGameArea">
+    <div id="skyjoGameArea" style="position:relative;">
 
       <!-- Bannière de tour -->
       <div id="skyjoTurnBanner" class="skyjo-turn-banner their-turn">⏳ …</div>
@@ -1443,6 +1542,33 @@
 
       <!-- Message contextuel bas d'écran -->
       <div id="skyjoPhaseMsg"></div>
+
+      <!-- ═══ RÉACTIONS EN JEU ═══ -->
+      <!-- Bulle réaction MOI — apparaît en bas à gauche de ma zone -->
+      <div id="sjReactionMe" class="sj-reaction-bubble sj-reaction-me" style="display:none;">
+        <img id="sjReactionMeImg" src="" alt="" class="sj-reaction-img">
+      </div>
+
+      <!-- Bulle réaction ADVERSAIRE — apparaît en bas à gauche de sa zone -->
+      <div id="sjReactionOpp" class="sj-reaction-bubble sj-reaction-opp" style="display:none;">
+        <img id="sjReactionOppImg" src="" alt="" class="sj-reaction-img">
+      </div>
+
+      <!-- Bouton déclencheur (bas gauche) -->
+      <button id="sjReactionTrigger" class="sj-reaction-trigger" onclick="skyjoToggleReactionPicker()" title="Réactions">
+        <img src="assets/images/reaction_1.png" alt="😄" class="sj-reaction-trigger-icon">
+      </button>
+
+      <!-- Picker de réactions -->
+      <div id="sjReactionPicker" class="sj-reaction-picker" style="display:none;">
+        <button class="sj-reaction-btn" onclick="skyjoSendReaction(1)"><img src="assets/images/reaction_1.png" alt="😄"></button>
+        <button class="sj-reaction-btn" onclick="skyjoSendReaction(2)"><img src="assets/images/reaction_2.png" alt="😊"></button>
+        <button class="sj-reaction-btn" onclick="skyjoSendReaction(3)"><img src="assets/images/reaction_3.png" alt="😎"></button>
+        <button class="sj-reaction-btn" onclick="skyjoSendReaction(4)"><img src="assets/images/reaction_4.png" alt="😘"></button>
+        <button class="sj-reaction-btn" onclick="skyjoSendReaction(5)"><img src="assets/images/reaction_5.png" alt="😈"></button>
+        <button class="sj-reaction-btn" onclick="skyjoSendReaction(6)"><img src="assets/images/reaction_6.png" alt="😢"></button>
+        <button class="sj-reaction-btn" onclick="skyjoSendReaction(7)"><img src="assets/images/reaction_7.png" alt="😁"></button>
+      </div>
 
     </div>
 
@@ -1908,7 +2034,6 @@
 <script src="js/app-love.js"></script>
 <script src="js/app-music.js"></script>
 <script src="js/app-games.js"></script>
-<script src="js/app-multiplayer.js"></script>
 <script src="js/app-skyjo.js"></script>
 <script src="js/app-pranks.js"></script>
 <script src="js/app-messages.js"></script>
