--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
 .sj-reaction-bubble.hiding { opacity: 0; }
 
 .sj-bubble-me {
-  bottom: 98px;
-  left: 64px;
+  bottom: 28%;
+  left: 8px;
 }
 .sj-bubble-opp {
   top: 60px;
