--- a/index.html
+++ b/index.html
@@ -969,27 +969,7 @@
      MESSAGES TAB — InstaLove
 ═══════════════════════════════════════════ -->
 <div id="yamMessagesTab" class="yam-tab-panel">
-  <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:60vh;padding:32px 24px;gap:0;">
-
-    <!-- Icône InstaLove -->
-    <div onclick="openHiddenPage()" style="cursor:pointer;display:flex;flex-direction:column;align-items:center;gap:0;-webkit-tap-highlight-color:transparent;" id="instaloveTabCard">
-      <!-- Logo Instagram dégradé -->
-      <div style="width:90px;height:90px;border-radius:22px;background:linear-gradient(135deg,#f9ce34 0%,#ee2a7b 50%,#405de6 100%);display:flex;align-items:center;justify-content:center;box-shadow:0 8px 32px rgba(238,42,123,0.35);margin-bottom:18px;position:relative;overflow:hidden;">
-        <!-- Halo animé -->
-        <div style="position:absolute;inset:0;border-radius:22px;background:linear-gradient(135deg,rgba(255,255,255,0.15) 0%,transparent 60%);pointer-events:none;"></div>
-        <svg viewBox="0 0 58 58" fill="none" width="52" height="52">
-          <rect x="6" y="6" width="46" height="46" rx="13" stroke="white" stroke-width="3" fill="none"/>
-          <circle cx="29" cy="29" r="10" stroke="white" stroke-width="3" fill="none"/>
-          <circle cx="42" cy="16" r="3" fill="white"/>
-        </svg>
-      </div>
-      <!-- Nom -->
-      <div style="font-family:'Playfair Display',serif;font-size:22px;font-weight:700;background:linear-gradient(90deg,#f9ce34,#ee2a7b 50%,#405de6);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;margin-bottom:6px;line-height:1.1;">InstaLove</div>
-      <!-- Tagline -->
-      <div style="font-size:13px;color:var(--muted);margin-bottom:0;">Messagerie privée ✨</div>
-    </div>
-
-  </div>
+  <!-- Fenêtre parasite supprimée — le clic nav ouvre directement InstaLove -->
 </div>
 
 <!-- ═══════════════════════════════════════════
@@ -1103,7 +1083,7 @@
 <div id="hiddenPage">
 
   <!-- TOPBAR — style header du site -->
-  <div class="dm-topbar" id="dmTopbar" style="height:auto;min-height:60px;padding:10px 14px;display:flex;align-items:center;justify-content:space-between;gap:10px;border-bottom:1px solid var(--border);">
+  <div class="dm-topbar" id="dmTopbar" style="height:auto;min-height:60px;padding:10px 14px;padding-top:calc(var(--safe-top) + 10px);display:flex;align-items:center;justify-content:space-between;gap:10px;border-bottom:1px solid var(--border);">
     <!-- Bouton retour (caché au départ, visible en sous-écrans) -->
     <div class="gv-back" id="dmTopbarBack" onclick="dmHandleBack()" style="flex-shrink:0;">
       <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"/></svg>
@@ -1148,22 +1128,26 @@
     <!-- Pill profil supprimée — les avatars sont dans la topbar -->
     <div id="dmTopbarProfile" style="display:none;"></div>
 
-    <!-- VUE 1 : juste le logo -->
-    <div class="dm-home-inner" id="dmHomeLogo" style="cursor:pointer;" onclick="dmShowConv()">
-      <div class="dm-home-logo-wrap">
-        <div class="dm-home-logo-bg"></div>
-        <svg class="dm-home-logo-icon" viewBox="0 0 58 58" fill="none">
-          <rect x="6" y="6" width="46" height="46" rx="13" stroke="white" stroke-width="3" fill="none"/>
-          <circle cx="29" cy="29" r="10" stroke="white" stroke-width="3" fill="none"/>
-          <circle cx="42" cy="16" r="3" fill="white"/>
-        </svg>
-      </div>
-      <div class="dm-home-appname">InstaLove</div>
-      <div class="dm-home-tagline">Messagerie privée ✨</div>
-    </div>
+    <!-- Logo supprimé — fenêtre parasite purgée -->
+    <div id="dmHomeLogo" style="display:none;"></div>
 
-    <!-- VUE 2 : carte Nous uniquement (cachée par défaut) -->
-    <div class="dm-home-inner" id="dmHomeConv" style="display:none;">
+    <!-- Écran conv : header style YAM + carte Nous -->
+    <div class="dm-home-inner dm-home-conv-screen" id="dmHomeConv" style="display:flex;">
+
+      <!-- Header grand style YAM -->
+      <div class="dm-yam-header">
+        <div class="hdr-tag">You And Me</div>
+        <div class="hdr-name">Messages</div>
+        <div class="hdr-sub">
+          <svg width="6" height="6" viewBox="0 0 6 6" fill="none"><circle cx="3" cy="3" r="3" fill="var(--green)"/></svg>
+          InstaLove ✨
+        </div>
+      </div>
+
+      <!-- Label section -->
+      <div style="padding:0 16px 10px;font-size:10px;font-weight:700;color:var(--muted);text-transform:uppercase;letter-spacing:2px;">Conversations</div>
+
+      <!-- Carte Nous -->
       <div class="dm-home-conv" onclick="dmOpenMessaging()">
         <div class="dm-home-conv-avatars">
           <div class="dm-avatar dm-avatar-girl" style="font-size:16px;background:none;">👧</div>
@@ -2377,9 +2361,19 @@ function v2ApplyDynamicNames(){
     }
     var _orig = window.yamSwitchTab;
     window.yamSwitchTab = function(tab){
-      _orig(tab);
-      // Remettre le scroll en haut après la transition (200ms = délai du switch)
-      setTimeout(function(){ window.scrollTo(0, 0); }, 220);
+      if(tab === 'messages'){
+        // Ouvrir directement InstaLove + conv, sans passer par la fenêtre parasite
+        _orig(tab);
+        setTimeout(function(){
+          if(typeof window.openHiddenPage === 'function') window.openHiddenPage();
+          setTimeout(function(){
+            if(typeof window.dmShowConv === 'function') window.dmShowConv();
+          }, 60);
+        }, 30);
+      } else {
+        _orig(tab);
+        setTimeout(function(){ window.scrollTo(0, 0); }, 220);
+      }
     };
   }
   patchYamSwitchTab();
